# Ajeeb_ajb

./: --interpret  --llvm  --skip-run  -o  .gitignore  AGENTS.md  CHANGELOG.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GITHUB_RELEASE_REPORT.md  HOTFIX_v1.0.1.md  INSTALLER_REPORT.md  INSTALL_VERIFICATION.md  INTERPRETER_PARITY.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  RELEASE_PIPELINE_AUDIT.md  ROADMAP_v0.3.md  RUST_REMOVAL_REPORT.md  RUST_USAGE_AUDIT.md  SECURITY.md  __methods.txt  ai.md  ajeeb.das  ajeeblangdoc.md  backend_audit_final.md  compiler  compiler.ajb  config.ajb  debug.txt  debug_entry.ajb  foo.ajb  foo.c  foo_test  gen2.sha  (+19 more)
ajeeb-lang/: README.md
ajeebBootstrap/: Cargo.toml
ajeebc/: --skip-run  ARCHITECTURE_FIX.md  Makefile  README.md  hello.ajb  install.sh  test_output.c
ajeebc/crates/ajeeb-registry/: Cargo.toml
ajeebc/crates/parth/: Cargo.toml  parth.ajb
ajeebc/crates/parth/src/: config.rs  main.rs  registry.rs  resolver.rs  types.rs
ajeebc/crates/parth/src/commands/: build.rs  deps.rs  init.rs  mod.rs  project.rs  registry.rs
ajeebc/crates/parth/src/registry/: auth.rs  cache.rs  crypto.rs  docs.rs  mod.rs  remote.rs  security.rs
compiler/: compiler.ajb
crates/parth/: Cargo.toml
crates/parth/src/: config.rs  main.rs  registry.rs  resolver.rs  types.rs
docs/: AJEEB_LANG.md  BOOTSTRAP.md  COMPILER_ARCHITECTURE.md  LLVM_BACKEND.md  MANUAL_RELEASE.md  MIR.md  PARTH.md  README.md  __methods.txt  architecture-audit.md  backend.md  error-system-architecture.md  generics-architecture.md  implementation-roadmap.md
examples/: echo_client.ajb  echo_server.ajb  fibonacci.ajb  generics.ajb  main.ajb
hello-world/: parth.das
parth/: README.md  build.sh  parth_m0.ajb  parth_m1.ajb  parth_m1_full.ajb  parth_m1_stripped.ajb
parthi/: README.md  build.sh
piri/: README.md  build.sh
release/: SHA256SUMS.txt  parthi-linux-x86_64  (+1 more)
(+732 files in other folders)
