[package]
name = "ajeeb_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["remote-registry"]
remote-registry = ["serde", "serde_json"]

[[bin]]
name = "parth"
path = "src/bin/parth.rs"
