[package]
name = "parth"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
getrandom = "0.3"
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
flate2 = "1"
tar = "0.4"

[[bin]]
name = "parth"
path = "src/main.rs"

[features]
default = []
